# heekscad

./: .gitmodules  CMakeLists.txt
interface/: TestMacros.h
src/: ConversionTools.cpp
unittest/: Makefile  README
unittest/polygon_test/: CMakeLists.txt  Polygontest.cpp
