FILE(GLOB TEST_SOURCES *.cpp)
SET(SOURCE_FILES ${TEST_SOURCES})

EXECUTE_PROCESS(COMMAND "python-config" "--includes" OUTPUT_VARIABLE PYTHONCFLAGS)
EXECUTE_PROCESS(COMMAND "getconf" "LONG_BIT" OUTPUT_VARIABLE LONG_BIT)
IF(${LONG_BIT} EQUAL "64")
    SET(FLAGS_64BIT "-D_OCC64 -m64")
ELSE(${LONG_BIT} EQUAL "64")
    SET(FLAGS_64BIT "")
ENDIF(${LONG_BIT} EQUAL "64")
MESSAGE(STATUS "LONG_BIT: ${LONG_BIT}")
ADD_DEFINITIONS("-Wall -g ${FLAGS_64BIT} -DUNICODE -DHEEKSCAD -DHAVE_LIMITS -DWXUSINGDLL -DHAVE_LIMITS -DTIXML_USE_STL ${RIP} ${PYTHONCFLAGS}  `wx-config  --cflags` -DUNITTEST -DUNITTEST_NO_HEEKS")
INCLUDE_DIRECTORIES("." ${HeeksCAD_SOURCE_DIR} "/usr/include/opencascade")

ADD_EXECUTABLE(polygontest ${SOURCE_FILES} ../../src/Polygon.cpp)
TARGET_LINK_LIBRARIES(polygontest gcov ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY} ${OpenCASCADE_LIBRARIES})
ADD_TEST(polygontest polygontest)
